# chela

./: .gitignore  Cargo.toml  README.md  build.rs  requirements.txt
.cargo/: config.toml
.github/workflows/: rust-clippy.yml  rust.yml
benches/: add_f32.py  add_f32.rs  backwards.py  binary_ops.py  einsum.py  einsum.rs  einsum2.py  einsum2.rs  einsum_2matrices.py  einsum_2operands.py  einsum_other.py  fill.py  fill.rs  fill_f32.py  fill_f32.rs  fill_f32_slice.py  fill_f32_slice.rs  fill_naive.rs  flat_iter_f32.py  flat_iter_f32.rs  mul_f32.py  mul_f32.rs  ones_f32.py  ones_f32.rs  reduce.py  sum_f32.py  sum_f32.rs  sum_f32_slice.py  sum_f32_slice2.py  sum_f32_slice2.rs  tensor_operations.py  zeroes_f32.py  zeroes_f32.rs
benches/perfprofiler/: __init__.py  config.py  plot.py  profile.py  result.py  suite.py  util.py
profile/: fill.py
profile/perfprofiler/: __init__.py  profile.py  result.py  suite.py
src/: accelerate.rs  axis.rs  device.rs  lib.rs  linalg.rs  macros.rs  ndarray.rs  profiler.rs  tensor.rs  traits.rs  util.rs
src/accelerate/: cblas.rs  mod.rs  openblas.rs  simd.rs  vdsp.rs
src/acceleration/: cblas.rs  mod.rs  openblas.rs  simd.rs  vdsp.rs
src/autograd/: accumulate_grad.rs  add_backwards.rs  arithmetic_backwards.rs  backwards.rs  bmm_backwards.rs  div_backwards.rs  dot_backwards.rs  gradient_function.rs  identity_backwards.rs  into.rs  into_gradient.rs  intro_gradient.rs  matrix_product_backwards.rs  matrix_vec_backwards.rs  mod.rs  mul_backwards.rs  neg_backwards.rs  none_backwards.rs  ops_backwards.rs  reshape_backwards.rs  sub_backwards.rs  tensor_api.rs  transpose_backwards.rs  util.rs
src/axis/: axes_traits.rs  index.rs  indexer.rs  indexer_impl.rs  slice_index.rs
src/common/: binary_ops.rs  constructors.rs  methods.rs  mod.rs  other.rs  random.rs  reshape.rs
src/linalg/: einsum.rs  matrix_ops.rs  (+5 more)
tests/: astype.rs  autograd.rs  binary_ops.rs  broadcast.rs  compiler_errors.rs  constructors.rs  data_owned.rs  diagonal.rs  einsum.rs  fill.rs  matrix_ops.rs  ndarray.rs  reduce.rs  requires_grad.rs  reshape.rs  tensor.rs  unary_ops.rs
(+136 files in other folders)
