[package]
name = "chela"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
cpu-time = "1.0.0"
bitflags = "2.6.0"
num = "0.4.3"
rand = "0.8.5"
rand_distr = "0.4"
paste = "1.0.15"

[lints.rust]
private_bounds = "allow"
dead_code = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(use_apple_accelerate)", "cfg(use_neon_simd)", "cfg(use_apple_blas)", "cfg(use_apple_vdsp)"] }

[profile.release]
overflow-checks = false

[features]
default = []
apple_accelerate = []
