[package]
name = "chela"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
cpu-time = "1.0.0"
bitflags = "2.6.0"
num = "0.4.3"
rand = "0.8.5"
rand_distr = "0.4"
paste = "1.0.15"

[build-dependencies]
pkg-config = "0.3.32"

[dev-dependencies]
trybuild = "1.0"

[lints.rust]
private_bounds = "allow"
dead_code = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(apple_accelerate)", "cfg(neon_simd)", "cfg(blas)", "cfg(apple_vdsp)", "cfg(openblas)"] }

[profile.release]
overflow-checks = false

[features]
default = []
apple_accelerate = []
