[package]
name = "chela"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "High-performance Machine Learning, Auto-Differentiation and Tensor Algebra crate for Rust"

keywords = ["machine-learning", "numpy", "pytorch", "linear-algebra", "vectors"]
categories = ["mathematics", "data-structures"]

build = "build.rs"
exclude = [
    "assets/*",
    "requirements.txt",
]

[dependencies]
cpu-time = "1.0.0"
bitflags = "2.6.0"
num = "0.4.3"
rand = "0.8.5"
rand_distr = "0.4"
paste = "1.0.15"

[build-dependencies]
pkg-config = "0.3.32"

[dev-dependencies]
trybuild = "1.0"

[lints.rust]
private_bounds = "allow"
dead_code = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(apple_accelerate)", "cfg(neon_simd)", "cfg(blas)", "cfg(apple_vdsp)", "cfg(openblas)"] }

[profile.release]
overflow-checks = false

[features]
default = []
apple_accelerate = []
